AM_CPPFLAGS = -I$(top_srcdir)/include

noinst_LTLIBRARIES = libjoints.la

libjoints_la_SOURCES =  joints.h \
                        joint.h joint.cpp \
                        joint_internal.h \
                        ball.h ball.cpp \
                        hinge.h hinge.cpp \
                        slider.h slider.cpp \
                        contact.h contact.cpp \
                        universal.h universal.cpp \
                        hinge2.h hinge2.cpp \
                        fixed.h fixed.cpp \
                        null.h null.cpp \
                        amotor.h amotor.cpp \
                        lmotor.h lmotor.cpp \
                        plane2d.h plane2d.cpp \
                        pu.h pu.cpp \
                        pr.h pr.cpp \
                        piston.h piston.cpp

